Deleting a paragraph of text should not add elements for typing style https://bugs.webkit.org/show_bug.cgi?id=82401

Reviewed by Enrica Casucci.

Source/WebCore:

This behavior was explicitly supported by DeleteSelectionCommand but it doesn't match TextEdit or Firefox.
We're changing our behavior to match TextEdit and Firefox in this patch.

The behavior is tested by an existing test, which was renamed to deleting-text-rests-typing-style.html in this patch.

Test: editing/execCommand/deleting-text-rests-typing-style.html

* editing/DeleteSelectionCommand.cpp:
(WebCore::DeleteSelectionCommand::calculateTypingStyleAfterDelete):

LayoutTests:

Rebaselined the tests per behavior changes. Also renamed 19653-3.html to deleting-text-rests-typing-style.html
which tests this behavioral change.

* editing/deleting/delete-and-cleanup-expected.txt:
* editing/deleting/delete-and-cleanup.html: Elements added for typing styles have been removed.
* editing/deleting/delete-br-012-expected.txt: Ditto.
* editing/deleting/delete-select-all-001-expected.txt: Ditto.
* editing/execCommand/19653-3-expected.txt: Removed.
* editing/execCommand/19653-3.html: Removed.
* editing/execCommand/apply-style-text-decoration-crash-expected.txt:
* editing/execCommand/delete-image-in-anchor-expected.txt: Ditto.
* editing/execCommand/deleting-text-rests-typing-style-expected.txt: Copied from LayoutTests/editing/execCommand/19653-3-expected.txt.
* editing/execCommand/deleting-text-rests-typing-style.html: Copied from LayoutTests/editing/execCommand/19653-3.html.
* editing/inserting/5994480-2-expected.txt:
* editing/inserting/5994480-2.html: Ditto; converted this test to a dump-as-markup test for clarity.
* editing/pasteboard/paste-text-with-style-2-expected.txt: Elements added for typing styles have been removed.
* editing/style/block-style-005-expected.txt:  Ditto.
* editing/pasteboard/select-element-1-expected.txt: Editing delegate dump changed but the final result remains intact.


Canonical link: https://commits.webkit.org/99859@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112444 268f45cc-cd09-0410-ab3c-d52691b4dbfc